--- a/oyster.html
+++ b/oyster.html
@@ -4,8 +4,9 @@
 <head>
 <title>Oyster</title>
 </head>
-<frameset rows="*">
+<frameset cols="100,100">
   <frame src="oyster-gui.pl">
+  <frame src="browse.pl">
   <noframes>
     Wird angezeigt, wenn der Browser keine Frames anzeigen kann
   </noframes>
