--- a/oyster.html
+++ b/oyster.html
@@ -5,8 +5,8 @@
 <title>Oyster</title>
 </head>
 <frameset cols="100,100">
-  <frame src="oyster-gui.pl">
-  <frame src="browse.pl">
+  <frame src="oyster-gui.pl" name="curplay">
+  <frame src="browse.pl" name="browse">
   <noframes>
     Wird angezeigt, wenn der Browser keine Frames anzeigen kann
   </noframes>
