Unterstuetzung fuer Browser hinzugefuegt, die keine Frames darstellen koennen.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
    <frame src="control.pl" name="control">
   </frameset>
   <frame src="browse.pl" name="browse">
-  <noframes>
-    Wird angezeigt, wenn der Browser keine Frames anzeigen kann
+    <noframes>
+	<p>
+	  Your browser does not seem to support display of frames.
+	</p>
+	<p>
+	  Of course, you can use the
+	  <a href='oyster-gui.pl?frames=no'>oyster-version without frames</a>
+	</p>
   </noframes>
 </frameset>
 </html>
