--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <title>Oyster</title>
+<link rel='shortcut icon' href='themes/default/favicon.png'>
 </head>
 <frameset cols="*,*">
   <frameset rows="*,80">
