no frameset, redirect

--- a/index.html
+++ b/index.html
@@ -4,17 +4,9 @@
 <head>
 <title>Oyster</title>
 <link rel='shortcut icon' href='themes/default/favicon.png'>
+<meta http-equiv="refresh" content="0;url=oyster-gui.py"/> 
 </head>
-<frameset cols="*,*">
-  <frameset rows="*,80">
-   <frame src="oyster-gui.py" name="curplay">
-   <frame src="control.py" name="control">
-  </frameset>
-  <frame src="browse.py" name="browse">
-    <noframes>
-	<p>
-	  Your browser does not seem to support display of frames.
-	</p>
-  </noframes>
-</frameset>
+<body>
+    <a href="oyster-gui.py">Oyster</a>
+</body>
 </html>
