unter admin.html ist jetzt die alte GUI, index.html redirected zu mBrowse.py. Ab da sollte alles die "mobile" Variane sein

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 <title>Oyster</title>
 <link rel='shortcut icon' href='themes/default/favicon.png'>
-<meta http-equiv="refresh" content="0;url=oyster-gui.py"/> 
+<meta http-equiv="refresh" content="0;url=mHome.py"/> 
 </head>
 <body>
-    <a href="oyster-gui.py">Oyster</a>
+    <a href="mHome.py">Oyster</a>
 </body>
 </html>
