Rename mobile pages

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 <title>Oyster</title>
 <link rel='shortcut icon' href='themes/default/favicon.png'>
-<meta http-equiv="refresh" content="0;url=mHome.py"/> 
+<meta http-equiv="refresh" content="0;url=home.py"/>
 </head>
 <body>
-    <a href="mHome.py">Oyster</a>
+    <a href="home.py">Oyster</a>
 </body>
 </html>
